# Fuyao

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/00/: CMakeLists.txt  README.md  rdma_rc.cpp
examples/00/utils/: utils.h
examples/01/: CMakeLists.txt  README.md  service_config.json
examples/01/debug/: fn_a.json  fn_b.json  fn_c.json  fn_d.json  fn_e.json  fn_f.json
examples/01/scripts/: start_all.sh  stop_all.sh
examples/01/src/fn_a/: fn_a.cpp
examples/01/src/fn_b/: fn_b.cpp
examples/01/src/fn_c/: fn_c.cpp
examples/01/src/fn_d/: fn_d.cpp
examples/01/src/fn_e/: fn_e.cpp
examples/01/src/fn_f/: fn_f.cpp
lib/base/: init.cpp  thread.cpp
lib/ipc/: shm_region.h
lib/rdma/: queue_pair.cpp  queue_pair.h  rdma_macro.h
lib/runtime/: worker_lib.cpp
src/dpu/gateway/: server.cpp
src/host/engine/: dispatcher.cpp  engine.cpp
src/host/worker/cpp/: func_worker.cpp  func_worker.h  func_worker_interface.h
